--- a/chocolatey/galaxy.yml
+++ b/chocolatey/galaxy.yml
@@ -9,7 +9,7 @@ namespace: chocolatey
 name: chocolatey
 
 # The version of the collection. Must be compatible with semantic versioning
-version: '{{ REPLACE_VERSION }}'
+version: 1.3.2
 
 # The path to the Markdown (.md) readme file. This path is relative to the root of the collection
 readme: README.md
